# oxidize

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build-deps.sh  main.rs  request.rs  routes.rs  test.rs  test_macro.rs
benchmarks/hello_world/: index.rs
benchmarks/techempower/: techempower.rs
cmake/: FindPackageHandleStandardArgs.cmake  ParseArguments.cmake  Rust.cmake
example/: routes.rs
example/benchmarks/: posgresql database table creation query  techempower.rs
example/hello_world/: Makefile  index.rs  renderer.rs
example/hello_world/public/css/: index.css
example/hello_world/src/: main.rs
example/hello_world/templates/: 500.html  index.html  mustache.html  variable.html
examples/hello_world/src/: hello.rs  main.rs
examples/hello_world_old/: Makefile  renderer.rs
src/: app.rs  conf.rs  lib.rs  macros.rs  mimetype.rs  oxidize.rs  renderer.rs  request.rs  response.rs  route.rs  router.rs  test.rs
src/backend/: mod.rs  rusthttp.rs
src/backend/mongrel/: connection.rs  mod.rs  tnetstring.rs
src/common/: method.rs  mod.rs  status.rs
src/middleware/: auth.rs  flask.py  mod.rs  session.rs
src/route/: matchrouter.rs  mod.rs  regexrouter.rs  trierouter.rs
tmp/: matchblockheroes.rs  shared_ptr.rs
views/: 404.html  index.html  test.html
